# advent-of-code-2025

./: Cargo.toml
day05/: nine.py
day09/: main.py
src/: advent_25_01.rs  advent_25_02.rs  advent_25_03.rs  advent_25_04.rs  advent_25_05.rs  advent_25_06.rs  advent_25_07.rs  advent_25_08.rs  advent_25_09.rs  advent_25_10.rs  advent_25_11.rs  advent_25_12.rs  lib.rs
