[package]
name = "aoc25"
version = "0.1.0"
edition = "2024"

[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1

[dependencies]
aoc_lib = { git = "https://github.com/antivirak/aoc-lib.git" }
dashmap = "6.1.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
rayon = "1.10.0"
regex = "1.11.1"
